<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:text="@string/Reg"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

      <EditText
        android:id="@+id/edName"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:inputType="text"
        android:text="Password" />

    <CheckBox
        android:id="@+id/Teacher"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="Teacher" />

    <CheckBox
        android:id="@+id/Student"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/Student" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reg"
        android:onClick="addData"
        />

    <Button
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewAll"
        android:text="Select" />


</LinearLayout>